work on footer and links to soc media

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,5 +7,13 @@ body {
 }
 
 
-    
-    
+.media {
+    background-color: black;
+    height: 60px;
+    position: relative;
+    color: gainsboro;
+}
+
+.socmedia {
+    display:inline-block;
+}
