--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap');
+
 body {
-    background-image: url('https://i2.wp.com/auralcrave.com/wp-content/uploads/2018/09/fa_1185_tomwaits1500.jpeg?resize=810%2C515&ssl=1');
-    background-size: cover;
+    background-image: url('https://pbs.twimg.com/media/D-AM9k2U4AAi-uM.jpg');
+    font-family: 'Mukta', sans-serif;
     background-repeat: no-repeat;
-    background-attachment:fixed;
-    
+    background-size: cover;  
+    max-width: 100%;
 }
 
-
-
-
+* {
+    box-sizing: border-box;
+  }
+  
+  .menu {
+    float: top;
+    width: 20%;
+    text-align: center;
+  }
+  
+  .menu a {
+    background-color: #e5e5e5;
+    padding: 8px;
+    margin-top: 7px;
+    display: block;
+    width: 100%;
+    color: black;
+  }
+  
+  .main {
+    float: left;
+    width: 60%;
+    padding: 0 20px;
+  }
+  
+  .right {
+    background-color: #e5e5e5;
+    float: left;
+    width: 20%;
+    padding: 15px;
+    margin-top: 7px;
+    text-align: center;
+  }
+  
+  @media only screen and (max-width: 620px) {
+    .menu, .main, .right {
+      width: 100%;
+    }
+  }
+   
