--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital@1&family=Zen+Old+Mincho&display=swap');
 
 
-
 body {
   margin:0;
   font-family: 'Noticia Text', serif;
@@ -41,13 +40,11 @@ body {
 }
 
 .hero {
-  background-image: url("https://pbs.twimg.com/media/D-AM9k2U4AAi-uM.jpg");
   background-repeat: no-repeat;
-
   background-size: cover;
-  background-color:antiquewhite;
-  min-height: 1000px;
-  max-width: 100%;
+  background-color: antiquewhite;
+  min-height:1000px;
+  max-width:100%;
 }
 
 .container {
@@ -113,7 +110,7 @@ body {
 
 
 .live {
-  background-color: gainsboro;
+  background-color: gray;
   opacity: 0.8;
   padding: 30px 30px 30px 30px;
  display: grid;
