--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital@1&family=Zen+Old+Mincho&display=swap');
 
 body {
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  font-family: 'Noticia Text', serif;
   font-family: 'Zen Old Mincho', serif;
- }
-  
- * {
-  box-sizing:border-box;
- }
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 .header {
   padding: 5px 45px;
@@ -20,7 +18,7 @@ body {
   color: #000;
   display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
   margin-left: 6px;
   margin-right: 6px;
   width: 100%;
@@ -34,12 +32,13 @@ body {
 
 .nav a:hover {
   color: darkred;
-  background-color:blanchedalmond;
+  background-color: blanchedalmond;
 }
+
 .nav {
   list-style: none;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   display: flex;
 }
 
@@ -48,11 +47,11 @@ body {
 }
 
 .hero {
-  background-color:antiquewhite;
+  background-color: antiquewhite;
   opacity: 0.8;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color:antiquewhite;
+  background-color: antiquewhite;
   min-height: 800px;
   margin: 20px;
   padding: 10px;
@@ -85,29 +84,29 @@ body {
   border: 1px solid black;
   display: flex;
   align-items: flex-end;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   max-width: 500px;
   height: 600px;
   margin: 20px 20px;
   padding: 5px 10px;
   text-align: center;
-  overflow:scroll;
+  overflow: scroll;
 }
 
 
 
 .live {
-background-color: gainsboro;
-opacity: 0.8;
-padding: 30px 30px 30px 30px;
-display: grid;
-grid-template-columns: 33% 33% 33%;
-margin: 20px 30px 0 40px;
-grid-row-gap: 20px;
-grid-column-gap: 50px;
-max-width: 90%;
+  background-color: gainsboro;
+  opacity: 0.8;
+  padding: 30px 30px 30px 30px;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  margin: 20px 30px 0 40px;
+  grid-row-gap: 20px;
+  grid-column-gap: 50px;
+  max-width: 90%;
 }
-   
+
 .info {
   background-color: gainsboro;
   opacity: 0.8;
@@ -119,22 +118,23 @@ max-width: 90%;
 }
 
 .albums {
-background-color: gainsboro;
-opacity: 0.8;
-padding: 20px 20px;
-display: grid;
-grid-template-columns: 24% 38% 36%;
-margin: 20px 20px;
-margin-right: px;
-grid-row-gap: 6px;
-grid-column-gap: 10px;
-max-width: 100%;
+  background-color: gainsboro;
+  opacity: 0.8;
+  padding: 20px 20px;
+  display: grid;
+  grid-template-columns: 24% 38% 36%;
+  margin: 20px 20px;
+  margin-right: px;
+  grid-row-gap: 6px;
+  grid-column-gap: 10px;
+  max-width: 100%;
 }
 
 hr {
-  width:70%
+  width: 70%
 }
-div.albums{
+
+div.albums {
   border: 1px solid black;
 }
 
@@ -152,13 +152,10 @@ div.desc {
   text-align: center;
 }
 
-
-
-* {
-  box-sizing: border-box;
-}
-
-input[type=text], select, textarea, email {
+input[type=text],
+input[type=email],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -186,13 +183,13 @@ input[type=submit]:hover {
 }
 
 .container {
-  border-radius: 5px; 
+  border-radius: 5px;
   background-color: gainsboro;
   border: solid 1px black;
   opacity: 0.8;
   padding: 20px;
   margin: 5px 5px;
-  
+
 }
 
 .col-25 {
@@ -207,9 +204,14 @@ input[type=submit]:hover {
   margin-top: 6px;
 }
 
+form {
+  width: 60%;
+  margin: 0 auto;
+}
+
 .lead {
   font-size: 20px;
-  text-align:center;
+  text-align: center;
   background-color: gainsboro;
   margin: 4px 2px;
   border: solid black 1px;
@@ -218,11 +220,10 @@ input[type=submit]:hover {
 .footer {
   background-color: lightslategray;
   opacity: 0.6;
-  color:black;
+  color: black;
   text-align: center;
   border: 2px solid black;
   padding: 6px 6px;
-  margin: 0 0 30px;
   display: flex;
 }
 
@@ -233,25 +234,28 @@ input[type=submit]:hover {
   text-align: center;
   text-decoration: none;
   justify-content: space-evenly;
-  color:black;
+  color: black;
 }
 
 .social {
   color: black;
   justify-content: space-between;
   list-style-type: none;
-  display:flex;
+  display: flex;
   font-size: 40px;
   margin: 2px 10px 20px 20px;
 }
 
 
- .fab a:hover {
-  color:aqua;
+.fab a:hover {
+  color: aqua;
 }
 
 @media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
+
+  .col-25,
+  .col-75,
+  input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
@@ -263,40 +267,115 @@ input[type=submit]:hover {
 }
 
 @media only screen and (min-width: 600px) {
+
   /* For tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+  .col-s-1 {
+    width: 8.33%;
+  }
+
+  .col-s-2 {
+    width: 16.66%;
+  }
+
+  .col-s-3 {
+    width: 25%;
+  }
+
+  .col-s-4 {
+    width: 33.33%;
+  }
+
+  .col-s-5 {
+    width: 41.66%;
+  }
+
+  .col-s-6 {
+    width: 50%;
+  }
+
+  .col-s-7 {
+    width: 58.33%;
+  }
+
+  .col-s-8 {
+    width: 66.66%;
+  }
+
+  .col-s-9 {
+    width: 75%;
+  }
+
+  .col-s-10 {
+    width: 83.33%;
+  }
+
+  .col-s-11 {
+    width: 91.66%;
+  }
+
+  .col-s-12 {
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
+
   /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+  .col-1 {
+    width: 8.33%;
+  }
+
+  .col-2 {
+    width: 16.66%;
+  }
+
+  .col-3 {
+    width: 25%;
+  }
+
+  .col-4 {
+    width: 33.33%;
+  }
+
+  .col-5 {
+    width: 41.66%;
+  }
+
+  .col-6 {
+    width: 50%;
+  }
+
+  .col-7 {
+    width: 58.33%;
+  }
+
+  .col-8 {
+    width: 66.66%;
+  }
+
+  .col-9 {
+    width: 75%;
+  }
+
+  .col-10 {
+    width: 83.33%;
+  }
+
+  .col-11 {
+    width: 91.66%;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
 }
+
 @media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
+
+  .col-25,
+  .col-75,
+  input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
 }
-
