--- a/assets/styles.css
+++ b/assets/styles.css
@@ -43,6 +43,7 @@ nav a:hover {
   height: 600px;
   overflow: scroll;
   border: solid 1px black;
+  padding: 2px 2px;
 }
 
 .blockquote {
@@ -53,19 +54,22 @@ nav a:hover {
   border: solid 1px black;
   font-size: 1.1rem;
   overflow: scroll;
+  padding: 2px 2px;
 }
 
 .card {
-  margin: 6px 10px 6px 6px;
+  margin: 6px 10px 6px 40px;
   background-color: gainsboro;
   border: solid 1px black;
   width: 420px;
   display: inline-block;
   padding: 10px;
 }
+
 form {
   margin-left: 10px;
 }
+
 footer {
   height: 100px;
   background-color: gray;
