--- a/assets/styles.css
+++ b/assets/styles.css
@@ -56,12 +56,11 @@ nav a:hover {
 }
 
 .card {
-  margin: 6px 10px 6px 40px;
-  background-color: gainsboro;
+  margin-top: 6px;
+  background-color: ghostwhite;
+  text-align: center;
   border: solid 1px black;
-  width: 420px;
-  display: inline-block;
-  padding: 10px;
+  padding:2px 2px;
 }
 button {
   width:180px;
