--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,10 +57,22 @@ nav a:hover {
 
 .card {
   margin-top: 6px;
+  margin-bottom:2px;
   background-color: ghostwhite;
   text-align: center;
   border: solid 1px black;
   padding:2px 2px;
+}
+.sub {
+  text-align:center;
+  background-color:goldenrod;
+  margin: 10px 20px;
+  padding: 20px 10px;
+  border: solid 1px black;
+}
+
+form {
+  margin:100px 40px;
 }
 button {
   width:180px;
@@ -71,7 +83,67 @@ button {
   color:white;
   border-radius: 8px 8px;
 }
+/* Style inputs, select elements and textareas */
+input[type=text], input[type=email], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
 
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+
+#subject {
+  height: 400px;
+}
+/* Style the container */
+.container {
+  border-radius: 5px;
+  background-color: ghostwhite;
+  padding: 10px;
+  margin-bottom:10px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.btn btn-dark{
+  width:200px;
+  height:200px;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 footer {
   height: 100px;
   background-color: gray;
