--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,34 +57,40 @@ nav a:hover {
 
 .card {
   margin-top: 6px;
-  margin-bottom:2px;
+  margin-bottom: 2px;
   background-color: ghostwhite;
   text-align: center;
   border: solid 1px black;
-  padding:2px 2px;
+  padding: 2px 2px;
 }
+
 .sub {
-  text-align:center;
-  background-color:goldenrod;
+  text-align: center;
+  background-color: goldenrod;
   margin: 10px 20px;
   padding: 20px 10px;
   border: solid 1px black;
 }
 
 form {
-  margin:100px 40px;
+  margin: 100px 40px;
 }
+
 button {
-  width:180px;
-  height:60px;
-  margin-left:16px;
-  margin-bottom:4px;
-  background-color:black;
-  color:white;
+  width: 180px;
+  height: 60px;
+  margin-left: 16px;
+  margin-bottom: 4px;
+  background-color: black;
+  color: white;
   border-radius: 8px 8px;
 }
+
 /* Style inputs, select elements and textareas */
-input[type=text], input[type=email], select, textarea{
+input[type=text],
+input[type=email],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -103,6 +109,7 @@ label {
 #subject {
   height: 400px;
 }
+
 /* Style the container */
 .container {
   border-radius: 5px;
@@ -132,18 +139,22 @@ label {
   clear: both;
 }
 
-.btn btn-dark{
-  width:200px;
-  height:200px;
+.btn btn-dark {
+  width: 200px;
+  height: 200px;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
+
+  .col-25,
+  .col-75,
+  input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
 }
+
 footer {
   height: 100px;
   background-color: gray;
